# kolosal_automl

./: .dockerignore  .env.example  .env.template  .gitattributes  .gitignore  BENCHMARK_INTEGRATION_SUMMARY.md  BENCHMARK_RESTRUCTURE_SUMMARY.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CLI_USAGE.md  COMPARISON_GUIDE.md  COMPARISON_README.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEV_RUST_BRANCH_INFO.md  Dockerfile  ENHANCED_COMPARISON_SUMMARY.md  KOLOSAL_COMPARISON_README.md  LICENSE  Makefile  OPTIMIZATION_README.md  README.md  README_API.md  RUST_MIGRATION_PLAN.md  STABILITY_FIXES_SUMMARY.md  SYSTEM_STATUS_FINAL.md  TEST_FIXES_SUMMARY.md  TRIAL_FEATURES_README.md  api.py  app.py  benchmark.py  benchmark_comparison.py  benchmark_comparison_config.json  benchmark_readme.md  benchmark_runner.py  compile.py  compose.yaml  debug_api.py  debug_validation.py  example_secure_api.py  (+35 more)
.github/: copilot-instructions.md
benches/: preprocessing.rs  training.rs
benchmark/: README.md  __init__.py  benchmark_asht.py  benchmark_comparison.py  benchmark_config.json  kolosal_automl_benchmark.py  standard_ml_benchmark.py  training_engine_benchmark.py
benchmark/scripts/: __init__.py  run_comparison.py  run_kolosal_comparison.py
benchmark_models/experiments/: experiment_1741847580.json  experiment_1741847588.json  experiment_1741847595.json  experiment_1741847605.json  experiment_1741847612.json  experiment_1741847622.json  experiment_1741847628.json  experiment_1741847638.json  experiment_1741847650.json  experiment_1741847657.json  experiment_1741847664.json  experiment_1741847684.json  experiment_1741847695.json  experiment_1741847707.json  experiment_1741847716.json  experiment_1741847737.json  experiment_1741847815.json  experiment_1741847821.json  experiment_1741847828.json  experiment_1741847836.json  experiment_1741847843.json  experiment_1741847850.json  experiment_1741847857.json  experiment_1741847878.json  experiment_1741847927.json  experiment_1741847935.json  experiment_1741847946.json  experiment_1741848018.json  experiment_1741848162.json  experiment_1741848171.json  (+11 more)
benchmark_results/: benchmark_report_20250311_131535.md  benchmark_results_20250311_131535.json  benchmark_results_20250311_135631.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
comparison_models/: logistic_regression_comparison.pkl  random_forest_comparison.pkl  ridge_comparison.pkl
comparison_results_quick_comparison/: comparison_report_20250701_141546.html  comparison_results_20250701_134904.json  comparison_results_20250701_135201.json  comparison_results_20250701_135619.json  comparison_results_20250701_135856.json  comparison_results_20250701_141311.json  comparison_results_20250701_141546.json
data/: breast_cancer.csv  iris.csv
debug_models/: debug_random_forest.pkl
docs/: BYTECODE_COMPILATION.md  COMPLETE_DOCUMENTATION_INDEX.md  OPTIMIZATION_SYSTEM.md  README.md  api_docs.md  benchmark-optimization.md  configs_docs.md  data_preprocessor_docs.md  device_optimizer_docs.md  inference_engine_docs.md  lru_ttl_cache_docs.md  model_manager_docs.md  optimizer_hyperoptx_docs.md  quantizer_docs.md  train_engine_docs.md
e2e/: pca.spec.ts  umap.spec.ts
examples/: basic_training.rs  hyperopt.rs  model_comparison.rs  preprocessing.rs
experiment_results/: experiment_results.json
experiments/: experiment_1754819007.json  experiment_1754819295.json  experiment_1754820515.json  experiment_1754926684.json  experiment_1754928369.json  experiment_1754931197.json  experiment_1754932234.json
exports/: random_forest_1746936360_20250511_110913.onnx  random_forest_1746936360_20250511_111620.onnx  random_forest_1746936360_20250511_112540.onnx  random_forest_1746943796_20250511_131139.pkl
kolosal-python/: Cargo.toml
kolosal-python/src/: preprocessing.rs  training.rs
legacy/: README.md  compile.bat  compile.sh  compose.dev.yaml  generate_ssl.py  nginx.conf  run_benchmarks.py
models/: GradientBoostingClassifier.pkl  LogisticRegression.pkl  RandomForestClassifier.pkl
modules/: __init__.py  compiler.py  configs.py  device_optimizer.py  feature_selection.py  hyperopt.py  logging_config.py  model_manager.py  model_selection.py
monitoring/: prometheus.yml
playwright-report-comparison/: index.html  results.json
result/: report.md
rust/: .gitignore  Cargo.toml  README.md
rust/kolosal-cli/: Cargo.toml
rust/kolosal-cli/src/: main.rs
rust/kolosal-core/: Cargo.toml
rust/kolosal-core/benches/: training.rs
rust/kolosal-core/src/: error.rs  lib.rs
rust/kolosal-core/src/inference/: engine.rs  mod.rs
rust/kolosal-core/src/optimizer/: mod.rs  samplers.rs  search_space.rs
rust/kolosal-core/src/preprocessing/: encoder.rs  imputer.rs  mod.rs  pipeline.rs  scaler.rs
rust/kolosal-core/src/training/: config.rs  engine.rs  linear_models.rs  mod.rs
rust/kolosal-core/src/utils/: data_loader.rs  mod.rs
rust/kolosal-python/src/: inference.rs  lib.rs  optimizer.rs  preprocessing.rs  training.rs
rust/kolosal-server/: Cargo.toml
rust/kolosal-server/src/: handlers.rs  lib.rs  main.rs
rust/kolosal-web/static/: index.html
scripts/: backup.sh  generate_secure_config.sh  health_check.sh  setup_production.bat  setup_production.sh  start_development.bat
src/: error.rs  lib.rs  main.rs
standard_ml_results/: standard_ml_report_20250803_200155.html  standard_ml_results_20250803_200155.json
static/: CSS_README.md  styles.css
test_comparison/: comparison_results_20250701_133912.json
test_models/: test_balanced_model.pkl  test_rf_classifier.pkl  test_rf_regressor.pkl
tests/: __init__.py  conftest.py  quality_pipeline_integration.rs  test_api.py  test_basic_setup.py  test_batch_processor.py  test_data_preprocessor.py  test_data_processing.rs  test_device_adaptive.rs  test_device_optimizer.py  test_engine.py  test_engine_api.py  test_full_pipeline.rs  test_inference_engine.py  test_lru_ttl_cache.py  test_optimizer.py  test_optimizer_hyperx.py  test_preprocessing.rs  test_security.rs  test_server.rs  test_serving.rs  test_train_engine.py  test_training.rs  test_web_ui.rs
(+784 files in other folders)
