[package]
name = "kolosal-automl"
version = "0.5.0"
edition = "2021"
authors = ["KolosalAI Team"]
license = "MIT"
repository = "https://github.com/KolosalAI/kolosal_automl"
description = "High-performance AutoML framework in Rust"
readme = "README.md"
keywords = ["machine-learning", "automl", "ml", "ai", "data-science"]
categories = ["science", "algorithms", "command-line-utilities"]

[lib]
name = "kolosal_automl"
path = "src/lib.rs"

[[bin]]
name = "kolosal"
path = "src/main.rs"

[dependencies]
# Core dependencies
ndarray = { version = "0.16", features = ["rayon", "serde"] }
polars = { version = "0.46", features = ["lazy", "parquet", "csv", "json", "dtype-full"] }
arrow = { version = "54" }
rayon = "1.10"
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# ML dependencies
smartcore = "0.3"
linfa = "0.7"
linfa-trees = "0.7"
linfa-linear = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Web server
axum = { version = "0.7", features = ["multipart", "ws"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "fs", "trace"] }

# CLI
clap = { version = "4.4", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
colored = "2.1"

# File handling
tempfile = "3.15"
mime_guess = "2.0"
calamine = "0.24"

# Utilities
rand = "0.8"
rand_chacha = "0.3"
rand_xoshiro = "0.6"
num-traits = "0.2"
parking_lot = "0.12"
dashmap = "6.1"
crossbeam = "0.8"
uuid = { version = "1.7", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
jsonwebtoken = "9.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6"
rstest = "0.24"
reqwest = { version = "0.12", features = ["json", "multipart"] }

[[bench]]
name = "preprocessing"
harness = false
path = "benches/preprocessing.rs"

[[bench]]
name = "training"
harness = false
path = "benches/training.rs"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
