[project]
name = "kolosal"
version = "0.2.0"
description = "High-performance AutoML framework with Rust backend"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "KolosalAI", email = "contact@kolosal.ai"}
]
requires-python = ">=3.9"
keywords = ["automl", "machine-learning", "rust", "high-performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "pandas>=1.3.0,<3.0.0",
]

[project.optional-dependencies]
# Rust backend (high performance) - built with maturin
rust = [
    "kolosal-rust>=0.2.0",
]

# Python backend dependencies (fallback)
python = [
    "scikit-learn>=1.1.0,<2.0.0",
    "scipy>=1.7.0,<2.0.0",
    "xgboost>=1.6.0,<4.0.0",
    "lightgbm>=3.3.0,<5.0.0",
    "optuna>=3.0.0,<5.0.0",
    "pyarrow>=10.0.0,<20.0.0",
]

# Full installation with both backends
full = [
    "kolosal[rust,python]",
]

# Development dependencies
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-asyncio>=0.21.0,<1.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-benchmark>=4.0.0,<5.0.0",
    "ruff>=0.1.0,<1.0.0",
    "black>=23.0.0,<25.0.0",
    "mypy>=1.0.0,<2.0.0",
    "maturin>=1.0.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/KolosalAI/kolosal_automl"
Repository = "https://github.com/KolosalAI/kolosal_automl"
Documentation = "https://kolosal-automl.readthedocs.io"
Issues = "https://github.com/KolosalAI/kolosal_automl/issues"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Build the Rust extension
module-name = "kolosal_rust"
features = ["pyo3/extension-module"]
python-source = "python"

# Include the pure Python wrapper package
include = ["python/kolosal/**/*"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "benchmark: Benchmark tests",
    "rust: Tests requiring Rust backend",
]

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
