[package]
name = "kolosal-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python bindings for kolosal-core via PyO3"

[lib]
name = "kolosal_automl"
crate-type = ["cdylib"]

[dependencies]
kolosal-core = { path = "../kolosal-core" }
pyo3.workspace = true
numpy.workspace = true
ndarray.workspace = true
polars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[build-dependencies]
pyo3-build-config = "0.23"
