[workspace]
resolver = "2"
members = [
    "kolosal-core",
    "kolosal-python",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["KolosalAI Team"]
license = "MIT"
repository = "https://github.com/KolosalAI/kolosal_automl"
description = "High-performance AutoML framework in Rust"

[workspace.dependencies]
# Core dependencies
ndarray = { version = "0.16", features = ["rayon", "serde"] }
polars = { version = "0.46", features = ["lazy", "parquet", "csv", "json", "dtype-full"] }
arrow = { version = "54" }
rayon = "1.10"
tokio = { version = "1.43", features = ["full"] }

# ML dependencies
smartcore = "0.3"
linfa = "0.7"
linfa-trees = "0.7"
linfa-linear = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Python bindings
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
numpy = "0.23"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6"
rstest = "0.24"

# Utilities
rand = "0.8"
rand_xoshiro = "0.6"
num-traits = "0.2"
parking_lot = "0.12"
dashmap = "6.1"
crossbeam = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
