[package]
name = "kolosal-cli"
version = "0.2.0"
edition = "2021"
authors = ["KolosalAI"]
description = "Command-line interface for Kolosal AutoML"
license = "MIT"

[[bin]]
name = "kolosal"
path = "src/main.rs"

[dependencies]
# Core
kolosal-core = { path = "../kolosal-core" }

# CLI
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17"

# Data
polars = { version = "0.46", features = ["lazy", "csv", "json", "parquet"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Colors
colored = "2.1"
