[package]
name = "kolosal-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core AutoML engine - preprocessing, training, inference, and optimization"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# Core
ndarray.workspace = true
polars.workspace = true
arrow.workspace = true
rayon.workspace = true
tokio.workspace = true

# ML
smartcore.workspace = true
linfa.workspace = true
linfa-trees.workspace = true
linfa-linear.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
rand.workspace = true
rand_xoshiro.workspace = true
num-traits.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
crossbeam.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
rstest.workspace = true

[[bench]]
name = "preprocessing"
harness = false

[[bench]]
name = "training"
harness = false
