[package]
name = "kolosal-server"
version = "0.2.0"
edition = "2021"
authors = ["KolosalAI"]
description = "High-performance AutoML web server"
license = "MIT"

[dependencies]
# Core
kolosal-core = { path = "../kolosal-core" }

# Web framework
axum = { version = "0.7", features = ["multipart", "ws"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "fs", "trace"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File handling
tempfile = "3.10"
mime_guess = "2.0"
uuid = { version = "1.7", features = ["v4"] }

# Data processing
polars = { version = "0.46", features = ["lazy", "csv", "json", "parquet"] }
calamine = "0.24"  # Excel support

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# System monitoring
sysinfo = "0.30"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Random
rand = "0.8"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
